[package]
name = "dyrah"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "bin/server.rs"

[[bin]]
name = "client"
path = "bin/client.rs"

[dependencies]
bincode = "1.3.3"
macroquad = "0.4.13"
macroquad-tiled = "0.2.1"
secs = { git = "https://github.com/wick3dr0se/secs", version = "0.1.0" }
serde = { version = "1.0.218", features = ["derive"] }
wrym = { git = "https://github.com/wick3dr0se/wrym", version = "0.1.0" }
