[package]
name = "dyrah_client"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = "0.4.13"
bincode = "1.3.3"
wrym = { git = "https://github.com/wick3dr0se/wrym", version = "0.1.0" }
secs = { git = "https://github.com/wick3dr0se/secs", version = "0.1.0", features = ["multithreaded"] }

dyrah_shared = { path = "../dyrah_shared" }