[package]
name = "dyrah_server"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3.3"
secs = { git = "https://github.com/wick3dr0se/secs", version = "0.1.0" }
wrym = { git = "https://github.com/wick3dr0se/wrym", version = "0.1.0", default-features = false, features = ["laminar"]}

dyrah_shared = { path = "../dyrah_shared" }