[package]
name = "dyrah_server"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3.3"
pathfinding = "4.14.0"
rand = "0.9.0"
secs = { git = "https://github.com/wick3dr0se/secs" }
wrym = { git = "https://github.com/wick3dr0se/wrym", default-features = false, features = ["laminar"]}

dyrah_shared = { path = "../dyrah_shared" }